--- a/web/styles/custom.css
+++ b/web/styles/custom.css
@@ -2,8 +2,21 @@
     Created on : Jul 15, 2015, 9:31:11 AM
     Author     : kgaitonde
 */
-.container
-{ 
-    background: rgba(0,191,255,0.8);
-    
+html,body{
+height:100%;
+padding: 0;
+margin: 0;
+}
+
+.navbar,nav,collapse{ 
+    height:80px;     
+}
+
+.brady-color{ 
+    background: rgba(76,142,192,1);
+}
+
+.widget{
+    height: 189px;
+    width:  350px;  
 }
