--- a/web/styles/custom.css
+++ b/web/styles/custom.css
@@ -3,16 +3,22 @@
     Author     : kgaitonde
 */
 body {
+   
     //background-color: #F9F9F9;
-    background-color: rgba(76,142,192,1);;
+   // background-color: rgba(76,142,192,0.9);;
 }
 
 .foot{ 
-    background: rgba(1,1,1,0.8);
+    background: rgba(1,1,1,0.9);
+    color:white;
 }
-
-
-
+.updates{
+    background: rgba(1,1,1,0.7);
+    color: white;
+}
+.field{
+    color:white;
+}
 .remember-me{
     color:white;
 }
