forgot password page added

--- a/web/styles/scrolling-nav.css
+++ b/web/styles/scrolling-nav.css
@@ -62,6 +62,15 @@ of those sections to manage the look and feel of the site. */
     background: #eee;
 }
 
+
+.contact-section {
+    height: 100%;
+    padding-top: 150px;
+    text-align: left;
+    background: #fff;
+}
+
+
 .blog-post {
     //height: 100%;
     padding-top: 150px;
@@ -69,8 +78,8 @@ of those sections to manage the look and feel of the site. */
     background: #fff;
 }
 
-.contact-section {
-    height: 100%;
+.email-pwd {
+    //height: 100%;
     padding-top: 150px;
     text-align: left;
     background: #fff;
