--- a/web/styles/scrolling-nav.css
+++ b/web/styles/scrolling-nav.css
@@ -35,7 +35,7 @@ of those sections to manage the look and feel of the site. */
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #eee;
+    background: #fff;
 }
 
 
@@ -44,7 +44,7 @@ of those sections to manage the look and feel of the site. */
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #eee;
+    background: #fff;
 }
 
 
@@ -59,7 +59,7 @@ of those sections to manage the look and feel of the site. */
     height: 100%;
     padding-top: 150px;
     text-align: left;
-    background: #eee;
+    background: #fff;
 }
 
 
