--- a/web/styles/scrolling-nav.css
+++ b/web/styles/scrolling-nav.css
@@ -47,6 +47,14 @@ of those sections to manage the look and feel of the site. */
     background: #fff;
 }
 
+.change-pwd-section {
+    height: 100%;
+    padding-top: 150px;
+    text-align: center;
+    background: #fff;
+}
+
+
 
 .about-section {
     height: 100%;
