updated admin and home page

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -44,3 +44,14 @@
 .color-white{
     color:white;
 }
+
+.link-style a { 
+color:white; 
+text-decoration:none; 
+} 
+
+.link-style a:hover { 
+color:black; 
+text-decoration:none; 
+} 
+
